# maxapi

./: .gitignore  LICENSE  MANIFEST.in  PASS.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_all_methods.py
.github/workflows/: docs.yml
docs/: auth.html  chats.html  contacts.html  events.html  index.html  messages.html  opcodes.html  quickstart.html  style.css
maxapi/: __init__.py  client.py  constants.py  formatting.py  protocol.py  session.py  transport.py  types.py
